--- a/estagio.html
+++ b/estagio.html
@@ -12,7 +12,7 @@
                <h3>"1.1 Objetivos "</h3>
                    <h4>"1.1.1 Objetivo geral"</h4>
                        <p> "O objetivo geral foi fazer estágio"</p>
-                  <h4>"Objetivos específico"</h4>
+                  <h4>"1.1.2 Objetivos específico"</h4>
                      <p> "O objetivo foi fazer estágio pra defender e pegar o diploma"</p>
           <h2>"2. Atividades realizadas"</h2>
                    <h3>"2.1 Atividade 1"</h3>
